--- a/DrinkRink/bin/DrinkRinkDebug.app/Contents/Info.plist
+++ b/DrinkRink/bin/DrinkRinkDebug.app/Contents/Info.plist
@@ -23,16 +23,16 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>6E35b</string>
+	<string>6A2008a</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>14D125</string>
+	<string>14A382</string>
 	<key>DTSDKName</key>
 	<string>macosx10.10</string>
 	<key>DTXcode</key>
-	<string>0640</string>
+	<string>0611</string>
 	<key>DTXcodeBuild</key>
-	<string>6E35b</string>
+	<string>6A2008a</string>
 </dict>
 </plist>
